# airgap-sapling

./: .dockerignore  .eslintignore  .gitignore  .gitlab-ci.yml  .prettierignore  Cargo.toml  Dockerfile  Package.swift  README.md  babel.config.js  fix-wbg-require.js  jitpack.yml  lerna.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
containers/android/: .dockerignore_android  Dockerfile
containers/npm/: .dockerignore_npm  Dockerfile
examples/: address-default.ts  address-indexed.ts  address-next.ts  key-extended-full-viewing.ts  key-extended-spending.ts  transaction.ts
plugins/: WasmPreloadPlugin.js
scripts/: version.sh
scripts/npm/: publish-beta-only.sh  publish.sh
src/: errors.rs  lib.rs  state.rs
src/address/: errors.rs  indexed_address.rs  ivk_address.rs  mod.rs  sapling_address.rs  xfvk_address.rs
src/common/: mod.rs
src/common/errors/: caused_by.rs  detailed_error.rs  sapling_error.rs
src/common/traits/: mod.rs  serializable.rs
src/common/utils/: assert_utils.rs  mod.rs  option_utils.rs  wasm_utils.rs
src/js/: index.d.ts  index.js  index.ts  sapling.ts  types.ts  utils.js
src/js/internal/: output_description.js  parameters.ts  payment_address.js  spend_description.js  spending_key.js  transaction.js  types.ts  utils.js  utils.ts  viewing_key.js
src/key/: mod.rs
src/key/bip32/: errors.rs  index.rs  mod.rs  path.rs
src/key/derivation/: derivation_index.rs  errors.rs
src/key/spending_key/: errors.rs  mod.rs  xsk.rs
src/key/viewing_key/: address.rs  errors.rs  mod.rs  ovk.rs  xfvk.rs
src/sapling_keys/: mod.rs
src/sapling_keys/derivation/: derivation_index.rs  derivation_junction.rs  derivation_path.rs  errors.rs  mod.rs
src/sapling_keys/spending_key/: errors.rs  (+5 more)
src/transaction/: commitment.rs  context.rs  errors.rs  merkle_path.rs  mod.rs  note.rs  proof.rs  rand.rs  scalar.rs
src/utils/: mod.rs  regex_utils.rs  wasm_utils.rs
src/wasm_bindings/: commitment.rs  key_agreement.rs  merkle_tree.rs  mod.rs  nullifier.rs  output_description.rs  payment_address.rs  proving_context.rs  rand.rs  signature.rs  spend_description.rs  spending_key.rs  viewing_key.rs
(+34 files in other folders)
