[package]
name = "sapling_wasm"
version = "0.0.1"
authors = ["Papers.ch <contact@papers.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
group = "0.7"
jubjub = "0.4"
regex = "1.3.9"
subtle = "2.2"
wasm-bindgen = "0.2.67"
zcash_primitives = "0.3.0"

[dev-dependencies]
hex = "0.4.2"
wasm-bindgen-test = "0.3.17"