[package]
name = "sapling_wasm"
version = "0.0.1"
authors = ["Papers.ch <contact@papers.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
bellman = "0.7"
bls12_381 = "0.2"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
group = "0.7"
jubjub = "0.4"
rand_core = "0.5.1"
regex = "1.3.9"
subtle = "2.2"
wasm-bindgen = "0.2.67"
zcash_primitives = "0.3.0"
zcash_proofs = "0.3"

[dev-dependencies]
hex = "0.4.2"
wasm-bindgen-test = "0.3.17"