[package]
name = "sapling_wasm"
version = "0.0.2"
authors = ["Papers.ch <contact@papers.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
bellman = { version = "0.8.1", default-features = false, features = ["groth16"] }
bls12_381 = "0.3.1"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.1.0", features = ["wasm-bindgen"] }
group = "0.8.0"
jubjub = "0.5.1"
rand_core = "0.5.1"
regex = "1.4.2"
subtle = "2.3.0"
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.46", features = ["console"] }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", package = "zcash_primitives", branch = "master" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", package = "zcash_proofs", branch = "master", default-features = false, features = ["local-prover"] }

[dev-dependencies]
hex = "0.4.2"
wasm-bindgen-test = "0.3.19"